padding on mobile fix

--- a/client/src/Styles/Landing.scss
+++ b/client/src/Styles/Landing.scss
@@ -8,7 +8,7 @@
     padding-top: 5rem;
     @media screen and (max-width: 900px) {
         flex-direction: column;
-        padding-top: 3rem;
+        padding-top: 3.5rem;
         justify-content: center;
         align-items: center;
         transform: translateX(0.5rem);
